<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/llSearchAndFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/cd_search_corse_by_name_or_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/search_courses"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_opacity_50"
                    android:textSize="14sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_choose_filter"
                android:padding="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_filter"
                app:tint="@color/white" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSearchAndFilter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/filter_text"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cd_filter_date"
            android:scaleType="centerInside"
            android:src="@drawable/ic_filter_arrows"
            app:tint="@color/green" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCourses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llFilter"
        tools:itemCount="3"
        tools:listitem="@layout/item_course_not_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>
