<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_gray"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_course_preview"
                android:scaleType="centerCrop"
                tools:src="@drawable/card_background_1" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/badgeRating"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rating_badge"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            app:layout_constraintBottom_toBottomOf="@id/imageContainer"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/cd_user_rating"
                android:padding="3dp"
                android:src="@drawable/ic_star"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="4.9" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rating_badge"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/imageContainer"
            app:layout_constraintStart_toEndOf="@id/badgeRating"
            tools:text="22 Мая 2024" />

        <ImageView
            android:id="@+id/buttonBookmark"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/cd_add_favorite_course"
            android:padding="8dp"
            android:src="@drawable/ic_favorite"
            app:tint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageContainer">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Java-разработчик с нуля" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:textColor="@color/white_opacity_50"
                android:textSize="14sp"
                tools:text="@string/tools_course_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="999 ₽" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/more_information"
                        android:textColor="@color/green"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/cd_more_course_information"
                        android:paddingHorizontal="4dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="1dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/green" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
